added additional instructions to data visualization section

--- a/documentation/MLABcode-documentation.html
+++ b/documentation/MLABcode-documentation.html
@@ -1542,12 +1542,16 @@ post-processed eddy covariance and biomet data for one final check.</p>
 <ol style="list-style-type: decimal">
 <li>Prior to running <code>dashboard_data_QCQA.Rmd</code>, make sure to
 create or update the init file for each site (under
-<code>init_files</code> folder)<br />
+<code>init_files</code> folder).<br />
 </li>
 <li>Prior to running <code>dashboard_data_QCQA.Rmd</code>, make sure to
 update the output file name on <em>line 3</em> (e.g.,
 <code>BB2_data_QCQA.html</code>) <strong>and</strong> the name of the
-init file on <em>line 31</em> (e.g., <code>BB2_data_QCQA.R</code>)</li>
+init file on <em>line 31</em> (e.g.,
+<code>BB2_data_QCQA.R</code>).<br />
+</li>
+<li>Now inspect each variable to assess if variable needs further
+QCQA.</li>
 </ol>
 </div>
 </div>
